adding product that has no category problem fixed

--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -1705,6 +1705,8 @@
             backLight: $('#ebook_reader_backlight_select').val(),
             warmBackLight: $('#ebook_reader_warm_backlight_select').val(),
             images: image_arr('ebook_reader_cover_image', 'ebook_reader_product_images'),
+            category_name: "",
+            subcategory_name: "",
             lists: JSON.stringify({})
         };
 
@@ -1758,6 +1760,8 @@
             caseWidth: $('#ebook_reader_case_width_input').val(),
             caseDepth: $('#ebook_reader_case_depth_input').val(),
             images: image_arr('ebook_reader_case_cover_image', 'ebook_reader_case_product_images'),
+            category_name: "",
+            subcategory_name: "",
             lists: JSON.stringify({})
         };
 
@@ -1806,6 +1810,8 @@
             shortDesc: $('#book_case_short_description_input').val(),
             longDesc: $('#book_case_long_description_input').val(),
             images: image_arr('book_case_cover_image', 'book_case_product_images'), // TODO
+            category_name: "",
+            subcategory_name: "",
             lists: JSON.stringify({})
         };
 
