--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -1856,7 +1856,7 @@
         var html = '<option value="">SELECT</option>';
         var len = data.length;
         for(var i = 0; i < len; i++) {
-            html += '<option value="' + data[i].name + '">' + data[i].name + '</option>';
+            html += '<option value="' + data[i] + '">' + data[i] + '</option>';
         }
         html += '</option>';
         $('#' + subcategoryName).html(html);
