--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -65,7 +65,9 @@
 
                     <li class="nav-item">
                         <a class="nav-link profile-navbar-text"
-                           th:attr="data-url=@{/admin-panel/product(size=(${#request.getParameter('size')} ?: '3'), page=(${#request.getParameter('page')} ?: '1'))}"
+                           th:attr="data-url=@{/admin-panel/product(size=(${#request.getParameter('size')} ?: '3'),
+                                                                    page=(${#request.getParameter('page')} ?: '1'),
+                                                                    sort=(${#request.getParameter('sort')} ?: 'date,desc'))}"
                            th:href="@{#product}">Products</a>
                     </li>
 
@@ -77,7 +79,8 @@
 
                     <li class="nav-item">
                         <a class="nav-link profile-navbar-text"
-                           th:attr="data-url=@{/admin-panel/hotList(size=(${#request.getParameter('size')} ?: '3'), page=(${#request.getParameter('page')} ?: '1'))}" th:href="@{#hotList}">Hot
+                           th:attr="data-url=@{/admin-panel/hotList(size=(${#request.getParameter('size')} ?: '3'), page=(${#request.getParameter('page')} ?: '1'))}"
+                           th:href="@{#hotList}">Hot
                             Lists</a>
                     </li>
 
