admin panel product sort fixes

--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -67,7 +67,7 @@
                         <a class="nav-link profile-navbar-text"
                            th:attr="data-url=@{/admin-panel/product(size=(${#request.getParameter('size')} ?: '3'),
                                                                     page=(${#request.getParameter('page')} ?: '1'),
-                                                                    sort=(${#request.getParameter('sort')} ?: 'date,desc'))}"
+                                                                    sort=(${#request.getParameter('sort')} ?: 'date-desc'))}"
                            th:href="@{#product}">Products</a>
                     </li>
 
@@ -92,7 +92,9 @@
 
                     <li class="nav-item">
                         <a class="nav-link profile-navbar-text"
-                           th:attr="data-url=@{/admin-panel/pending-order(size=(${#request.getParameter('size')} ?: '3'), page=(${#request.getParameter('page')} ?: '1'))}"
+                           th:attr="data-url=@{/admin-panel/pending-order(size=(${#request.getParameter('size')} ?: '3'),
+                                                                            page=(${#request.getParameter('page')} ?: '1'),
+                                                                            sort=(${#request.getParameter('sort')} ?: 'date-desc'))}"
                            th:href="@{#pending-order}">Pending Orders</a>
                     </li>
 
