--- a/src/main/resources/static/styles/profile.css
+++ b/src/main/resources/static/styles/profile.css
@@ -1728,8 +1728,11 @@ section {
 }
 
 .product_dropdown_filter {
-    width: 130px;
     position: relative;
+    width: 170px;
+    border-radius: 5px;
+    border: 1px #b3b3b3 solid;
+    margin-left: 10px;
 }
 
 .cart-product-name {
