--- a/src/main/resources/templates/admin_panel/_category.html
+++ b/src/main/resources/templates/admin_panel/_category.html
@@ -74,15 +74,53 @@
             <div class="isotope_sorting_text"><span>Sort</span><i
                     class="fa fa-caret-down" aria-hidden="true"></i></div>
             <ul>
-                <li class="item_sorting_btn"
-                    data-isotope-option='{ "sortBy": "original-order" }'>ID
+                <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#category(sort=${'ID-desc'}, size=${categoryPage.size}, page=${1})}"
+                       th:text="'Decreasing by ID'"
+                       th:style="${sort == 'ID-desc'} ? 'color:#1f5b70'">
+                    </a>
                 </li>
-                <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "name" }'>Name</li>
-                <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "itemNum" }'>
-                    Total Product
+                <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#category(sort=${'ID-asc'}, size=${categoryPage.size}, page=${1})}"
+                       th:text="'Increasing by ID'"
+                       th:style="${sort == 'ID-asc'} ? 'color:#1f5b70'">
+                    </a>
                 </li>
-                <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "subcategory" }'>
-                    Total Subcategory
+                <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#category(sort=${'name-asc'}, size=${categoryPage.size}, page=${1})}"
+                       th:text="'A - Z'"
+                       th:style="${sort == 'name-asc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#category(sort=${'name-desc'}, size=${categoryPage.size}, page=${1})}"
+                       th:text="'Z - A'"
+                       th:style="${sort == 'name-desc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#category(sort=${'total-desc'}, size=${categoryPage.size}, page=${1})}"
+                       th:text="'Decreasing by Total'"
+                       th:style="${sort == 'total-desc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#category(sort=${'total-asc'}, size=${categoryPage.size}, page=${1})}"
+                       th:text="'Increasing by Total'"
+                       th:style="${sort == 'total-asc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#category(sort=${'subcategory-desc'}, size=${categoryPage.size}, page=${1})}"
+                       th:text="'Decreasing by Subcategory'"
+                       th:style="${sort == 'subcategory-desc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#category(sort=${'subcategory-asc'}, size=${categoryPage.size}, page=${1})}"
+                       th:text="'Increasing by Subcaregory'"
+                       th:style="${sort == 'subcategory-asc'} ? 'color:#1f5b70'">
+                    </a>
                 </li>
             </ul>
         </div>
@@ -114,31 +152,33 @@
                 <tr th:each="category: ${categoryPage.content}">
 
                     <!-- User -->
-                    <div class="product">
+                    <div class="address-element-padding">
                         <a th:href="@{'/category-details/' + ${category.id}}">
-                            <div class="product_content">
-                                <div class="row order - row collapsible">
-                                    <div class="col-lg-3 col-md-3 col-xs-6">
-                                        <div class="profile-order-text category-id">
-                                            <td th:text="${category.id}"></td>
+                            <div class="category-element">
+                                <div class="product_content">
+                                    <div class="row order - row collapsible">
+                                        <div class="col-lg-3 col-md-3 col-xs-6">
+                                            <div class="profile-order-text">
+                                                <td class="category-id" th:text="${category.id}"></td>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="col-lg-3 col-md-3 col-xs-6">
-                                        <div class="profile-order-text category-name">
-                                            <td class="category-name" th:text="${category.name}"></td>
+                                        <div class="col-lg-3 col-md-3 col-xs-6">
+                                            <div class="profile-order-text">
+                                                <td class="category-name" th:text="${category.name}"></td>
+                                            </div>
                                         </div>
-                                    </div>
 
-                                    <div class="col-lg-3 col-md-3 col-xs-6">
-                                        <div class="profile-order-text">
-                                            <td class="category-itemNum" th:text="${category.itemNum}"></td>
+                                        <div class="col-lg-3 col-md-3 col-xs-6">
+                                            <div class="profile-order-text">
+                                                <td class="category-itemNum" th:text="${category.itemNum}"></td>
+                                            </div>
                                         </div>
-                                    </div>
 
-                                    <div class="col-lg-3 col-md-3 col-xs-6">
-                                        <div class="profile-order-text">
-                                            <td class="category-subcategory-size"
-                                                th:text="${category.subcategories.size()}"></td>
+                                        <div class="col-lg-3 col-md-3 col-xs-6">
+                                            <div class="profile-order-text">
+                                                <td class="category-subcategory-size"
+                                                    th:text="${category.subcategories.size()}"></td>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -157,7 +197,7 @@
                 <ul class="d-flex flex-row align-items-start justify-content-center">
                     <!-- Previous button -->
                     <li th:style="${currentPage == 1} ? 'display:none'">
-                        <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${currentPage - 1})}"
+                        <a th:href="@{/admin-panel#category(sort=${sort}, size=${categoryPage.size}, page=${currentPage - 1})}"
                            aria-label="Previous" title="Previous Page" rel="tooltip">
                             <i class="pagination_arrow fa fa-angle-left"></i>
                         </a>
@@ -166,7 +206,7 @@
                     <!-- First page -->
                     <li th:if="${categoryPage.totalPages > 0}"
                         th:class="${currentPage == 1} ? 'active'">
-                        <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1})}"
+                        <a th:href="@{/admin-panel#category(sort=${sort}, size=${categoryPage.size}, page=${1})}"
                            th:title="${'Page '+ 1}"
                            th:text="${1}" style="color: #fbaa1d;">
                         </a>
@@ -179,7 +219,7 @@
                         th:each="i : ${#numbers.sequence(currentPage - 2 > 1 ? currentPage - 2 : 2
                                         , categoryPage.totalPages > 2 + currentPage ? currentPage + 2 : categoryPage.totalPages - 1, 1)}"
                         th:class="${currentPage == i} ? 'active'">
-                        <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${i})}"
+                        <a th:href="@{/admin-panel#category(sort=${sort}, size=${categoryPage.size}, page=${i})}"
                            th:text="${i}" th:title="${'Page '+ i}" style="color: #fbaa1d;"></a>
                     </li>
 
@@ -188,7 +228,7 @@
                     <!-- Last page -->
                     <li th:if="${categoryPage.totalPages > 1}"
                         th:class="${currentPage == categoryPage.totalPages} ? 'active'">
-                        <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${categoryPage.totalPages})}"
+                        <a th:href="@{/admin-panel#category(sort=${sort}, size=${categoryPage.size}, page=${categoryPage.totalPages})}"
                            th:text="${categoryPage.totalPages}" style="color: #fbaa1d;"
                            th:title="${'Page '+ categoryPage.totalPages}">
                         </a>
@@ -196,7 +236,7 @@
 
                     <!-- Next button -->
                     <li th:style="${currentPage == categoryPage.totalPages} ? 'display:none'">
-                        <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${currentPage + 1})}"
+                        <a th:href="@{/admin-panel#category(sort=${sort}, size=${categoryPage.size}, page=${currentPage + 1})}"
                            aria-label="Next" title="Next Page" rel="tooltip">
                             <i class="pagination_arrow fa fa-angle-right"></i>
                         </a>
