--- a/src/main/resources/templates/profile/_review.html
+++ b/src/main/resources/templates/profile/_review.html
@@ -6,26 +6,71 @@
 
 <span th:if="${reviewPage.totalPages > 0}">
 <!-- Sort orders -->
-<div class="products_bar_side d-flex flex-row align-items-start justify-content-start ml-lg-auto">
+<div class="products_bar_side d-flex flex-row align-items-end justify-content-end ml-lg-auto">
     <div class="products_dropdown product_dropdown_sorting">
         <div class="isotope_sorting_text"><span>Sort</span><i
                 class="fa fa-caret-down" aria-hidden="true"></i></div>
-        <ul style="text-align: start">
-            <li class="item_sorting_btn"
-                data-isotope-option='{ "sortBy": "original-order" }'>Date
+        <ul>
+
+            <li class="item_sorting_btn">
+                <a th:href="@{/profile/review(size=${reviewPage.size}, page=${1})}"
+                   th:text="'Decreasing by Date'"
+                   th:style="${sort == 'date-desc'} ? 'color:#1f5b70'">
+                </a>
             </li>
-            <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "book-name" }'>Product
-                Name
+
+            <li class="item_sorting_btn">
+                <a th:href="@{/profile/review(sort=${'date-asc'}, size=${reviewPage.size}, page=${1})}"
+                   th:text="'Increasing by Date'"
+                   th:style="${sort == 'date-asc'} ? 'color:#1f5b70'">
+                </a>
             </li>
-            <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "decr-rate" }'>
-                Decreasing Rate
+
+            <li class="item_sorting_btn">
+                <a th:href="@{/profile/review(sort=${'title-asc'}, size=${reviewPage.size}, page=${1})}"
+                   th:text="'Review Title A - Z'"
+                   th:style="${sort == 'title-asc'} ? 'color:#1f5b70'">
+                </a>
             </li>
-            <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "incr-rate" }'>
-                Increasing Rate
+
+            <li class="item_sorting_btn">
+                <a th:href="@{/profile/review(sort=${'title-desc'}, size=${reviewPage.size}, page=${1})}"
+                   th:text="'Review Title Z - A'"
+                   th:style="${sort == 'title-desc'} ? 'color:#1f5b70'">
+                </a>
             </li>
+
+            <li class="item_sorting_btn">
+                <a th:href="@{/profile/review(sort=${'content-asc'}, size=${reviewPage.size}, page=${1})}"
+                   th:text="'Review Content A - Z'"
+                   th:style="${sort == 'content-asc'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+
+            <li class="item_sorting_btn">
+                <a th:href="@{/profile/review(sort=${'content-desc'}, size=${reviewPage.size}, page=${1})}"
+                   th:text="'Review Content Z - A'"
+                   th:style="${sort == 'content-desc'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+
+            <li class="item_sorting_btn">
+                <a th:href="@{/profile/review(sort=${'rate-desc'}, size=${reviewPage.size}, page=${1})}"
+                   th:text="'Decreasing by Rate'"
+                   th:style="${sort == 'rate-desc'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+
+            <li class="item_sorting_btn">
+                <a th:href="@{/profile/review(sort=${'rate-asc'}, size=${reviewPage.size}, page=${1})}"
+                   th:text="'Increasing by Rate'"
+                   th:style="${sort == 'rate-asc'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+
         </ul>
     </div>
-    <div style="width: 50px"></div>
+
     <div class="products_dropdown product_dropdown_filter">
         <div class="isotope_filter_text"><span>Filter</span><i class="fa fa-caret-down"
                                                                aria-hidden="true"></i></div>
@@ -142,7 +187,7 @@
             <ul class="d-flex flex-row align-items-start justify-content-center">
                 <!-- Previous button -->
                 <li th:style="${currentPage == 1} ? 'display:none'">
-                    <a th:href="@{/profile/review(size=${reviewPage.size}, page=${currentPage - 1})}"
+                    <a th:href="@{/profile/review(sort=${sort}, size=${reviewPage.size}, page=${currentPage - 1})}"
                        aria-label="Previous" title="Previous Page"
                        rel="tooltip">
                         <i class="pagination_arrow fa fa-angle-left"></i>
@@ -152,7 +197,7 @@
                 <!-- First page -->
                 <li th:if="${reviewPage.totalPages > 0}"
                     th:class="${currentPage == 1} ? 'active'">
-                    <a th:href="@{/profile#review(size=${reviewPage.size}, page=${1})}"
+                    <a th:href="@{/profile#review(sort=${sort}, size=${reviewPage.size}, page=${1})}"
                        th:title="${'Page '+ 1}"
                        th:text="${1}" style="color: #fbaa1d;">
                     </a>
@@ -165,7 +210,7 @@
                     th:each="i : ${#numbers.sequence(currentPage - 2 > 1 ? currentPage - 2 : 2
                                     , reviewPage.totalPages > 2 + currentPage ? currentPage + 2 : reviewPage.totalPages - 1, 1)}"
                     th:class="${currentPage == i} ? 'active'">
-                    <a th:href="@{/profile#review(size=${reviewPage.size}, page=${i})}"
+                    <a th:href="@{/profile#review(sort=${sort}, size=${reviewPage.size}, page=${i})}"
                        th:text="${i}" th:title="${'Page '+ i}"
                        style="color: #fbaa1d;"></a>
                 </li>
@@ -176,7 +221,7 @@
                 <!-- Last page -->
                 <li th:if="${reviewPage.totalPages > 1}"
                     th:class="${currentPage == reviewPage.totalPages} ? 'active'">
-                    <a th:href="@{/profile#review(size=${reviewPage.size}, page=${reviewPage.totalPages})}"
+                    <a th:href="@{/profile#review(sort=${sort}, size=${reviewPage.size}, page=${reviewPage.totalPages})}"
                        th:text="${reviewPage.totalPages}"
                        style="color: #fbaa1d;"
                        th:title="${'Page '+ reviewPage.totalPages}">
@@ -185,7 +230,7 @@
 
                 <!-- Next button -->
                 <li th:style="${currentPage == reviewPage.totalPages} ? 'display:none'">
-                    <a th:href="@{/profile#review(size=${reviewPage.size}, page=${currentPage + 1})}"
+                    <a th:href="@{/profile#review(sort=${sort}, size=${reviewPage.size}, page=${currentPage + 1})}"
                        aria-label="Next" title="Next Page" rel="tooltip">
                         <i class="pagination_arrow fa fa-angle-right"></i>
                     </a>
