--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -1350,85 +1350,129 @@
                     class="fa fa-caret-down" aria-hidden="true"></i></div>
             <ul>
                 <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#product(sort=${'date-desc'}, size=${productPage.size}, page=${1})}"
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${'date-desc'}, filter=${filter})}"
                        th:text="'Decreasing by Date'"
                        th:style="${sort == 'date-desc'} ? 'color:#1f5b70'">
                     </a>
                 </li>
 
                 <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#product(sort=${'date-asc'}, size=${productPage.size}, page=${1})}"
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${'date-asc'}, filter=${filter})}"
                        th:text="'Increasing by Date'"
                        th:style="${sort == 'date-asc'} ? 'color:#1f5b70'">
                     </a>
                 </li>
 
                 <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#product(sort=${'ID-desc'}, size=${productPage.size}, page=${1})}"
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${'ID-desc'}, filter=${filter})}"
                        th:text="'Decreasing by ID'"
                        th:style="${sort == 'ID-desc'} ? 'color:#1f5b70'">
                     </a>
                 </li>
 
                 <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#product(sort=${'ID-asc'}, size=${productPage.size}, page=${1})}"
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${'ID-asc'}, filter=${filter})}"
                        th:text="'Increasing by ID'"
                        th:style="${sort == 'ID-asc'} ? 'color:#1f5b70'">
                     </a>
                 </li>
 
                 <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#product(sort=${'name-asc'}, size=${productPage.size}, page=${1})}"
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${'name-asc'}, filter=${filter})}"
                        th:text="'A - Z'"
                        th:style="${sort == 'name-asc'} ? 'color:#1f5b70'">
                     </a>
                 </li>
 
                 <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#product(sort=${'name-desc'}, size=${productPage.size}, page=${1})}"
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${'name-desc'}, filter=${filter})}"
                        th:text="'Z - A'"
                        th:style="${sort == 'name-desc'} ? 'color:#1f5b70'">
                     </a>
                 </li>
 
                 <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#product(sort=${'price-desc'}, size=${productPage.size}, page=${1})}"
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${'price-desc'}, filter=${filter})}"
                        th:text="'Decreasing by Price'"
                        th:style="${sort == 'price-desc'} ? 'color:#1f5b70'">
                     </a>
                 </li>
 
                 <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#product(sort=${'price-asc'}, size=${productPage.size}, page=${1})}"
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${'price-asc'}, filter=${filter})}"
                        th:text="'Increasing by Price'"
                        th:style="${sort == 'price-asc'} ? 'color:#1f5b70'">
                     </a>
                 </li>
 
                 <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#product(sort=${'barcode-desc'}, size=${productPage.size}, page=${1})}"
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${'barcode-desc'}, filter=${filter})}"
                        th:text="'Decreasing by Barcode'"
                        th:style="${sort == 'barcode-desc'} ? 'color:#1f5b70'">
                     </a>
                 </li>
 
                 <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#product(sort=${'barcode-asc'}, size=${productPage.size}, page=${1})}"
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${'barcode-asc'}, filter=${filter})}"
                        th:text="'Increasing by Barcode'"
                        th:style="${sort == 'barcode-asc'} ? 'color:#1f5b70'">
                     </a>
                 </li>
 
                 <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#product(sort=${'stock-desc'}, size=${productPage.size}, page=${1})}"
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${'stock-desc'}, filter=${filter})}"
                        th:text="'Decreasing by Stock'"
                        th:style="${sort == 'stock-desc'} ? 'color:#1f5b70'">
                     </a>
                 </li>
 
                 <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#product(sort=${'stock-asc'})}" th:text="'Increasing by Stock'"
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${'stock-asc'}, filter=${filter})}"
+                       th:text="'Increasing by Stock'"
                        th:style="${sort == 'stock-asc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="products_dropdown product_dropdown_filter">
+            <div class="isotope_filter_text"><span>Product Filter</span><i class="fa fa-caret-down"
+                                                                           aria-hidden="true"></i>
+            </div>
+            <ul>
+                <li class="item_filter_btn">
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${sort}, filter=${'all'})}"
+                       th:text="'All'" th:style="${filter == 'all'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_filter_btn">
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${sort}, filter=${'book'})}"
+                       th:text="'Book'" th:style="${filter == 'book'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_filter_btn">
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${sort}, filter=${'e-book'})}"
+                       th:text="'E-Book'" th:style="${filter == 'e-book'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_filter_btn">
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${sort}, filter=${'audio-book'})}"
+                       th:text="'Audio Book'" th:style="${filter == 'audio-book'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_filter_btn">
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${sort}, filter=${'e-book-reader'})}"
+                       th:text="'E-Book Reader'" th:style="${filter == 'e-book-reader'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_filter_btn">
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${sort}, filter=${'e-book-reader-case'})}"
+                       th:text="'E-Book Reader Case'" th:style="${filter == 'e-book-reader-case'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_filter_btn">
+                    <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1}, sort=${sort}, filter=${'book-case'})}"
+                       th:text="'Book Case'" th:style="${filter == 'book-case'} ? 'color:#1f5b70'">
                     </a>
                 </li>
             </ul>
@@ -1520,7 +1564,10 @@
                 <ul class="d-flex flex-row align-items-start justify-content-center">
                     <!-- Previous button -->
                     <li th:style="${currentPage == 1} ? 'display:none'">
-                        <a th:href="@{/admin-panel#product(sort=${sort}, size=${productPage.size}, page=${currentPage - 1})}"
+                        <a th:href="@{/admin-panel#product(size=${productPage.size},
+                                                            page=${currentPage - 1},
+                                                            sort=${sort},
+                                                            filter=${filter})}"
                            aria-label="Previous" title="Previous Page" rel="tooltip">
                             <i class="pagination_arrow fa fa-angle-left"></i>
                         </a>
@@ -1529,7 +1576,10 @@
                     <!-- First page -->
                     <li th:if="${productPage.totalPages > 0}"
                         th:class="${currentPage == 1} ? 'active'">
-                        <a th:href="@{/admin-panel#product(sort=${sort}, size=${productPage.size}, page=${1})}"
+                        <a th:href="@{/admin-panel#product(size=${productPage.size},
+                                                            page=${1},
+                                                            sort=${sort},
+                                                            filter=${filter})}"
                            th:title="${'Page '+ 1}"
                            th:text="${1}" style="color: #fbaa1d;">
                         </a>
@@ -1542,7 +1592,10 @@
                         th:each="i : ${#numbers.sequence(currentPage - 2 > 1 ? currentPage - 2 : 2
                                         , productPage.totalPages > 2 + currentPage ? currentPage + 2 : productPage.totalPages - 1, 1)}"
                         th:class="${currentPage == i} ? 'active'">
-                        <a th:href="@{/admin-panel#product(sort=${sort}, size=${productPage.size}, page=${i})}"
+                        <a th:href="@{/admin-panel#product(size=${productPage.size},
+                                                            page=${i},
+                                                            sort=${sort},
+                                                            filter=${filter})}"
                            th:text="${i}" th:title="${'Page '+ i}" style="color: #fbaa1d;"></a>
                     </li>
 
@@ -1551,7 +1604,10 @@
                     <!-- Last page -->
                     <li th:if="${productPage.totalPages > 1}"
                         th:class="${currentPage == productPage.totalPages} ? 'active'">
-                        <a th:href="@{/admin-panel#product(sort=${sort}, size=${productPage.size}, page=${productPage.totalPages})}"
+                        <a th:href="@{/admin-panel#product(size=${productPage.size},
+                                                            page=${productPage.totalPages},
+                                                            sort=${sort},
+                                                            filter=${filter})}"
                            th:text="${productPage.totalPages}" style="color: #fbaa1d;"
                            th:title="${'Page '+ productPage.totalPages}">
                         </a>
@@ -1559,7 +1615,10 @@
 
                     <!-- Next button -->
                     <li th:style="${currentPage == productPage.totalPages} ? 'display:none'">
-                        <a th:href="@{/admin-panel#product(sort=${sort}, size=${productPage.size}, page=${currentPage + 1})}"
+                        <a th:href="@{/admin-panel#product(size=${productPage.size},
+                                                            page=${currentPage + 1},
+                                                            sort=${sort},
+                                                            filter=${filter})}"
                            aria-label="Next" title="Next Page" rel="tooltip">
                             <i class="pagination_arrow fa fa-angle-right"></i>
                         </a>
